Added top navbar to master layout

--- a/client/woofi.html
+++ b/client/woofi.html
@@ -1,11 +1,15 @@
 <template name="master">
+  {{> navbarTop }}
 </template>
 
 <template name="loading">
+
 </template>
 
 <template name="notFound">
+
 </template>
 
 <template name="home">
+
 </template>
