--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -6,7 +6,14 @@
         <ul class="right hide-on-med-and-down">
           <li><a href="/login">Sign In</a></li>
         </ul>
+        <ul id="slide-out" class="side-nav">
+          <li><a href="#!">First Sidebar Link</a></li>
+          <li><a href="#!">Second Sidebar Link</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse show-on-large"><i class="mdi-navigation-menu"></i></a>
       </div>
+
+
     </nav>
   </div>
 </template>
