Changed login-password* to register-password in registration forms

--- a/client/turnkey/turnkey.html
+++ b/client/turnkey/turnkey.html
@@ -44,13 +44,13 @@
       </div>
       <div class="input-field">
         <i class="mdi-communication-vpn-key prefix"></i>
-        <input id="login-password" type="password" class="validate">
-        <label for="login-password">My Password</label>
+        <input id="register-password" type="password" class="validate">
+        <label for="register-password">My Password</label>
       </div>
       <div class="input-field">
         <i class="mdi-communication-vpn-key prefix"></i>
-        <input id="login-password-confirm" type="password" class="validate">
-        <label for="login-password-confirm">Confirm Password</label>
+        <input id="register-password-confirm" type="password" class="validate">
+        <label for="register-password-confirm">Confirm Password</label>
       </div>
       <div class="row">
         <button class="btn light-green waves-effect waves-light right" type="submit" name="action">Let's Go!
