--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -7,12 +7,12 @@
           <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
           <a href="/" class="brand-logo">WooFi</a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="/login">Sign In</a></li>
+            <li><a data-action-logout>Sign Out</a></li>
           </ul>
           <!-- end top navbar contents  -->
           <!-- side menu contents   -->
           <ul id="slide-out" class="side-nav">
-            <li><a href="/login">Sign In</a></li>
+            <li><a data-action-logout>Sign Out</a></li>
           </ul>
           <!-- end side menu contents   -->
         {{else}}
@@ -28,6 +28,7 @@
             <li><a href="/login">Sign In</a></li>
           </ul>
           <!-- end side menu contents   -->
+        {{/if}}
       </div>
     </nav>
   </div>
