--- a/client/woofi.html
+++ b/client/woofi.html
@@ -1,6 +1,8 @@
 <template name="master">
-  {{> navbarTop }}
-  {{> yield }}
+  <main>
+    {{> navbar }}
+    {{> yield }}
+  </main>
 </template>
 
 <template name="loading">
