Renamed navbarSide template to sideNav

--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -4,13 +4,13 @@
       <div class="nav-wrapper">
         <a href="/" class="brand-logo">WooFi</a>
         <a href="#" data-activates="slide-out" class="button-collapse hover-darken"><i class="mdi-navigation-menu"></i></a>
-        {{> navbarSide }}
+        {{> sideNav }}
       </div>
     </nav>
   </div>
 </template>
 
-<template name="navbarSide">
+<template name="sideNav">
   <div id="slide-out" class="side-nav fixed">
     <div id="sidenav-icon">
       <i class="mdi-action-help"></i>
@@ -31,4 +31,8 @@
       {{/if}}
     </div>
   </div>
+</template>
+
+<template name="sideNavPets">
+  
 </template>
