Basic pet page with About and Feeding tab sections

--- a/client/woofi.html
+++ b/client/woofi.html
@@ -1,3 +1,9 @@
+<head>
+  <title></title>
+<!--  <link rel="icon" type="image/png" href="/img/labsbubbles.png" />  -->
+  <meta id="meta" name="viewport" content="initial-scale=1.0" />
+</head>
+
 <template name="master">
   <main>
     {{> navbar }}
