Added z-depth to turnkey & new pet forms

--- a/client/turnkey/turnkey.html
+++ b/client/turnkey/turnkey.html
@@ -1,9 +1,9 @@
 <template name="login">
   <div class="container">
-    <div class="row">
+    <div class="row turnkey-header">
       <h4 class="left-align">Login</h4>
     </div>
-    <form id="turnkey-login">
+    <form id="turnkey-login" class="z-depth-1">
       <div class="input-field">
         <i class="mdi-communication-email prefix"></i>
         <input id="login-email" type="email" class="validate">
@@ -15,23 +15,23 @@
         <label for="login-password">My Password</label>
       </div>
       <div class="row">
-        <button class="btn light-green waves-effect waves-light right" type="submit" name="action">Let's Go!
+        <button class="btn woofi-btn waves-effect right" type="submit" name="action">Let's Go!
           <i class="mdi-content-send right"></i>
         </button>
       </div>
     </form>
-    <div class="row">
-      <a href="/register" class="right right-align">Don't have an account with WooFi yet?</a>
+    <div class="row center">
+      <a href="/register">Don't have an account with WooFi yet?</a>
     </div>
   </div>
 </template>
 
 <template name="register">
   <div class="container">
-    <div class="row">
+    <div class="row turnkey-header">
       <h4 class="left-align">Register</h4>
     </div>
-    <form id="turnkey-register">
+    <form id="turnkey-register" class="z-depth-1">
       <div class="input-field">
         <i class="mdi-action-account-circle prefix"></i>
         <input id="register-name" type="text" class="validate">
@@ -53,13 +53,13 @@
         <label for="register-password-confirm">Confirm Password</label>
       </div>
       <div class="row">
-        <button class="btn light-green waves-effect waves-light right" type="submit" name="action">Let's Go!
+        <button class="btn woofi-btn waves-effect waves-light right" type="submit" name="action">Let's Go!
           <i class="mdi-content-send right"></i>
         </button>
       </div>
     </form>
-    <div class="row">
-      <a href="/login" class="right right-align">Already have an account?</a>
+    <div class="row center">
+      <a href="/login">Already have an account?</a>
     </div>
   </div>
 </template>
