--- a/client/add-pet/add-pet.html
+++ b/client/add-pet/add-pet.html
@@ -5,7 +5,7 @@
         Tell us about your furry friend!
       </h4>
     </div>
-    <form id="add-pet">
+    <form id="add-pet" class="z-depth-1">
       <div class="input-field">
         <i class="mdi-social-mood prefix"></i>
         <input id="add-pet-name" type="text" class="validate">
