Added z-depth to sideNav

--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -11,7 +11,7 @@
 </template>
 
 <template name="sideNav">
-  <div id="slide-out" class="side-nav fixed">
+  <div id="slide-out" class="side-nav fixed z-depth-3">
     <div id="sidenav-icon">
       <i class="mdi-action-help"></i>
       <div>Vet Innovations</div>
