Wired up User Profile, resolves #9

--- a/client/pet/pet.html
+++ b/client/pet/pet.html
@@ -14,7 +14,7 @@
 </template>
 
 <template name="petProfile">
-  <form id="pet-about">
+  <form id="about-pet">
     <div class="input-field">
       <i class="mdi-social-mood prefix {{isActive pet.name}}"></i>
       <input id="pet-name" type="text" class="validate {{isValid pet.name}} {{isActive pet.name}}" value="{{pet.name}}">
