Implemented Turnkey autofocus

--- a/client/turnkey/turnkey.html
+++ b/client/turnkey/turnkey.html
@@ -6,7 +6,7 @@
     <form id="turnkey-login" class="z-depth-1">
       <div class="input-field">
         <i class="mdi-communication-email prefix"></i>
-        <input id="login-email" type="email" class="validate">
+        <input id="login-email" type="email" class="validate" autofocus>
         <label for="login-email">My Email</label>
       </div>
       <div class="input-field">
@@ -34,7 +34,7 @@
     <form id="turnkey-register" class="z-depth-1">
       <div class="input-field">
         <i class="mdi-action-account-circle prefix"></i>
-        <input id="register-name" type="text" class="validate">
+        <input id="register-name" type="text" class="validate" autofocus>
         <label for="register-name">My Name</label>
       </div>
       <div class="input-field">
