Logged in welcome uses first name and bolds greeting text

--- a/client/woofi.html
+++ b/client/woofi.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
         <p class="flow-text">
-          Hi, {{currentUser.profile.name}}!  Welcome to WooFi, the pet feeder <span style="text-decoration: line-through;">from</span> of the future.
+          <b>Hi, {{firstName}}!</b>  Welcome to WooFi, the pet feeder <span style="text-decoration: line-through;">from</span> of the future.
         </p>
         <p class="flow-text">
           You can use the menu to the left to manage your pets and their diets!
