Add Pet dialog uses brand colour button

--- a/client/add-pet/add-pet.html
+++ b/client/add-pet/add-pet.html
@@ -19,7 +19,7 @@
         <label>Animal Type</label>
       </div>
       <div class="row">
-        <button class="btn waves-effect waves-light right" type="submit" name="action">Let's Go!
+        <button class="btn woofi-btn waves-effect waves-light right" type="submit" name="action">Let's Go!
           <i class="mdi-content-send right"></i>
         </button>
       </div>
