--- a/client/units/units.html
+++ b/client/units/units.html
@@ -1,7 +1,7 @@
 <template name="mass">
   <span class="unit-wrapper mass">
     {{#if value}}
-      {{convertMass value}}
+      {{convertMassToPreference value}}
     {{/if}}
     <a data-mass-toggle class="unit">{{currentUser.profile.units.mass}}</a>
   </span>
