--- a/client/pet/pet.html
+++ b/client/pet/pet.html
@@ -7,34 +7,42 @@
           <li class="tab col s6"><a href="#diet">Diet</a></li>
         </ul>
       </div>
-      <div id="about" class="col s12 z-depth-1">{{> petProfile }}</div>
+      <div id="about" class="col s12">{{> petProfile }}</div>
       <div id="diet" class="col s12 z-depth-1">{{> petDiet }}</div>
     </div>
   </div>
 </template>
 
 <template name="petProfile">
-  <form id="about-pet">
-    <div class="input-field">
-      <i class="mdi-social-mood prefix {{isActive pet.name}}"></i>
-      <input id="pet-name" type="text" class="validate {{isValid pet.name}} {{isActive pet.name}}" value="{{pet.name}}">
-      <label for="pet-name" class="{{isActive pet.name}}">Pet's Name</label>
-    </div>
-    <div class="input-field">
-      <select id="pet-type">
-        {{> dropdownOption value="dog" labelValue="Dog" checkAgainst=pet.type}}
-        {{> dropdownOption value="cat" labelValue="Cat" checkAgainst=pet.type}}
-      </select>
-      <label>Animal Type</label>
-    </div>
-    <p class="range-field">
-      <label>Weight</label>
-      <div class="row">
-        {{> mass value=petMass }}
+  <div class="z-depth-1">
+    <form id="about-pet">
+      <div class="input-field">
+        <i class="mdi-social-mood prefix {{isActive pet.name}}"></i>
+        <input id="pet-name" type="text" class="validate {{isValid pet.name}} {{isActive pet.name}}" value="{{pet.name}}">
+        <label for="pet-name" class="{{isActive pet.name}}">Pet's Name</label>
       </div>
-      <input type="range" id="pet-mass" value="{{convertMassToPreference pet.mass}}" min="{{massExtrema 'min' pet.type}}" max="{{massExtrema 'max' pet.type}}" />
-    </p>
-  </form>
+      <div class="input-field">
+        <select id="pet-type">
+          {{> dropdownOption value="dog" labelValue="Dog" checkAgainst=pet.type}}
+          {{> dropdownOption value="cat" labelValue="Cat" checkAgainst=pet.type}}
+        </select>
+        <label>Animal Type</label>
+      </div>
+      <p class="range-field">
+        <label>Weight</label>
+        <div class="row">
+          {{> mass value=petMass }}
+        </div>
+        <input type="range" id="pet-mass" value="{{convertMassToPreference pet.mass}}" min="{{massExtrema 'min' pet.type}}" max="{{massExtrema 'max' pet.type}}" />
+      </p>
+    </form>
+  </div>
+  <div id="delete-pet-panel" class="z-depth-1">
+    <div class="row">
+      <button data-target="pet-delete-dialog" class="btn modal-trigger waves-effect waves-light red">Delete {{pet.name}}</button>
+    </div>
+  </div>
+  {{> petDeleteDialog }}
 </template>
 
 <template name="petDiet">
