Pet gender is implemented in Add Pet interface

--- a/client/add-pet/add-pet.html
+++ b/client/add-pet/add-pet.html
@@ -18,6 +18,13 @@
         </select>
         <label>Animal Type</label>
       </div>
+      <div class="input-field">
+        <select id="add-pet-gender">
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
+        <label>Animal Gender</label>
+      </div>
       <p class="range-field">
         <label>Weight</label>
         <div class="row">
