--- a/client/pet/pet.html
+++ b/client/pet/pet.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col s12 z-depth-2 tabs-header">
         <ul id="pet-tabs" class="tabs">
-          <li class="tab col s6"><a class="active" href="#about">About {{pet.name}}</a></li>
-          <li class="tab col s6"><a href="#diet">Diet</a></li>
+          <li class="tab col s6"><a class="active truncate" href="#about">About {{pet.name}}</a></li>
+          <li class="tab col s6"><a class="truncate" href="#diet">Diet</a></li>
         </ul>
       </div>
       <div id="about" class="col s12">{{> petProfile }}</div>
